--- a/i3/config
+++ b/i3/config
@@ -1,3 +1,4 @@
+exec_always picom --config /home/SP649/.config/picom.conf &
 exec gentoo-pipewire-launcher &
 exec_always --no-startup-id feh --bg-scale /home/SP649/Downloads/background/lowback.jpg 
 exec_always --no-startup-id polybar &
